# yixiu-todos

./: .gitignore  AGENT.md  Cargo.toml  QUICKSTART.txt  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: debug.yaml  release.yml
.playwright-cli/: page-2026-07-22T13-31-12-634Z.yml  page-2026-07-22T13-33-11-957Z.yml
docs/: ARCHITECTURE.md  DEV_PLAN.md
docs/superpowers/plans/: 2026-07-22-team-panel-redesign.md  2026-07-22-yixiu-todos-implementation.md
docs/superpowers/specs/: 2026-07-22-team-panel-redesign.md  2026-07-22-yixiu-todos-design.md
src/: main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: api.rs  conflict.rs  db.rs  employee.rs  error.rs  lib.rs  main.rs  project.rs  reminder.rs  rules.rs  scheduler.rs  task.rs  task_star.rs  tray.rs
src/views/: personal.ts  settings.ts  star-panel.ts  task-detail.ts  team-projects.ts  team-tasks.ts  team-workload.ts  team.ts
