[package]
name = "yixiu_todos"
version = "0.1.0"
description = "个人/团队待办管理 — 精力占用面板 + 时间冲突告警 + 员工任务管理"
authors = ["you"]
edition = "2021"
rust-version = "1.75"

[lib]
name = "yixiu_todos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-notification = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
notify-rust = "4"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
once_cell = "1"
parking_lot = "0.12"
fern = { version = "0.7", features = ["colored"] }
app_dirs2 = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
